add sdks reference

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity
+            android:name="com.example.pm.rsrsdk.ListView"/>
+
+        <activity
+            android:name="com.example.pm.rsrsdk.DummyActivity"/>
+
     </application>
 
 </manifest>
